let's see how this does... coding blind.
This should give us a basic partyline setup. We have partyline
detection and forwarding messages to users in the partyline. Here goes
nothing.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "~3.4.8",
     "simplesmtp": "*",
-    "mailparser": "*"
+    "mailparser": "*",
+    "mandrill-api": "~1.0.39"
   }
 }
